feat(auth): fixed problem with sequenz